# backend/Nag.Api/Endpoints/DevicesEndpoints.cs
@@ -1,6 +1,7 @@
 using Marten;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.Routing;
 using Nag.Api.Auth;
 using Nag.Core.Contracts;
 using Nag.Core.Domain;
@@ -13,6 +14,7 @@ public static class DevicesEndpoints
     [AllowAnonymous]
     [NotTenanted]
     [Tags("Devices")]
+    [EndpointName("postDevicesRegister")]
     [ProducesResponseType(typeof(RegisterDeviceResponse), StatusCodes.Status200OK)]
     [ProducesResponseType(typeof(ErrorResponse), StatusCodes.Status400BadRequest)]
     [WolverinePost("/devices/register")]
@@ -73,6 +75,7 @@ public static class DevicesEndpoints
     [AllowAnonymous]
     [NotTenanted]
     [Tags("Devices")]
+    [EndpointName("postDevicesPair")]
     [ProducesResponseType(typeof(PairDeviceResponse), StatusCodes.Status200OK)]
     [ProducesResponseType(typeof(ErrorResponse), StatusCodes.Status400BadRequest)]
     [ProducesResponseType(typeof(ErrorResponse), StatusCodes.Status401Unauthorized)]
