# backend/Nag.Api/Endpoints/SyncEndpoints.cs
@@ -1,4 +1,5 @@
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.AspNetCore.Routing;
 using Nag.Core.Contracts;
 using Nag.Core.Handlers;
 using Wolverine.Http;
@@ -8,6 +9,7 @@ namespace Nag.Api.Endpoints;
 public static class SyncEndpoints
 {
     [Tags("Sync")]
+    [EndpointName("getSync")]
     [ProducesResponseType(typeof(SyncResponse), StatusCodes.Status200OK)]
     [WolverineGet("/sync")]
     public static async Task<IResult> GetSync(
